// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    article={
        Object {
            "author": "dhh",
            "body": "One of the real delights of programming is picking great variable, method, and class names. But an even greater treat is when you can name pairs, or even whole narratives, that fit just right. And the very best of those is when you’re forced to trade off multiple forces pulling in different directions. This is the story of one such case.
        
        It started with a simple refactoring. We allow people to post arbitrary URLs in Basecamp 3’s chat, which we’ll attempt to fetch and display inline, if its an image, movie, or a Twitter URL. There’s a security concern where we don’t want to allow internal IPs in those URLs, like 127.0.0.1, and then have our Downloader class attempt to trigger an internal request that may sidestep other security precautions.
        
        The specific policy isn’t as important as the fact that this precondition was originally just part of the Downloader class, but now I also needed it in our forthcoming webhooks API. Because just like with previewable chat URLs, webhooks allow users to set URLs that our system then calls. Same underlying security issue to deal with.
        
        No problemo: Just extract the protection into its own module and call it from both spots. First attempt at naming this new module gave me PrivateNetworkProtector, which seemed like a fine choice until I considered the method names that’d work with it:
        
        ",
            "created_at": "2018-02-28T14:48:54.444740278Z",
            "id": "123",
            "tags": null,
            "title": "Hunting for great names in programming",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h2
          className="article__title"
>
          <Link
                    replace={false}
                    to="/articles/123"
          >
                    Hunting for great names in programming
          </Link>
</h2>,
        <ul
          className="article__subtitle mb-2"
>
          <li>
                    <FontAwesomeIcon$1
                              border={false}
                              className="mr-2"
                              fixedWidth={false}
                              flip={null}
                              icon="calendar-alt"
                              listItem={false}
                              mask={null}
                              name=""
                              pull={null}
                              pulse={false}
                              rotation={null}
                              size={null}
                              spin={false}
                              symbol={false}
                              transform={null}
                    />
                    <button
                              className="btn btn-link article__subtitle--date"
                              onClick={[Function]}
                    >
                              February 28th, 2018
                    </button>
          </li>
</ul>,
        <Link
          replace={false}
          to="/articles/123"
>
          <div
                    className="article__contents"
          >
                    <p
                              className="text-muted"
                    >
                              One of the real delights of programming is picking great variable, method, and class names. But an even greater treat is when you can name pairs, or even whole narratives, that fit just right. And the very best of those is when you’re forced to trade off multiple forces pulling in different directions. This is the story of one such case.
                              
                              It sta...
                    </p>
          </div>
</Link>,
        <hr />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <Link
            replace={false}
            to="/articles/123"
>
            Hunting for great names in programming
</Link>,
          "className": "article__title",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Hunting for great names in programming",
            "replace": false,
            "to": "/articles/123",
          },
          "ref": null,
          "rendered": "Hunting for great names in programming",
          "type": [Function],
        },
        "type": "h2",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <li>
              <FontAwesomeIcon$1
                            border={false}
                            className="mr-2"
                            fixedWidth={false}
                            flip={null}
                            icon="calendar-alt"
                            listItem={false}
                            mask={null}
                            name=""
                            pull={null}
                            pulse={false}
                            rotation={null}
                            size={null}
                            spin={false}
                            symbol={false}
                            transform={null}
              />
              <button
                            className="btn btn-link article__subtitle--date"
                            onClick={[Function]}
              >
                            February 28th, 2018
              </button>
</li>,
            null,
          ],
          "className": "article__subtitle mb-2",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <FontAwesomeIcon$1
                  border={false}
                  className="mr-2"
                  fixedWidth={false}
                  flip={null}
                  icon="calendar-alt"
                  listItem={false}
                  mask={null}
                  name=""
                  pull={null}
                  pulse={false}
                  rotation={null}
                  size={null}
                  spin={false}
                  symbol={false}
                  transform={null}
/>,
                <button
                  className="btn btn-link article__subtitle--date"
                  onClick={[Function]}
>
                  February 28th, 2018
</button>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "border": false,
                  "className": "mr-2",
                  "fixedWidth": false,
                  "flip": null,
                  "icon": "calendar-alt",
                  "listItem": false,
                  "mask": null,
                  "name": "",
                  "pull": null,
                  "pulse": false,
                  "rotation": null,
                  "size": null,
                  "spin": false,
                  "symbol": false,
                  "transform": null,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "February 28th, 2018",
                  "className": "btn btn-link article__subtitle--date",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": "February 28th, 2018",
                "type": "button",
              },
            ],
            "type": "li",
          },
          null,
        ],
        "type": "ul",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <div
            className="article__contents"
>
            <p
                        className="text-muted"
            >
                        One of the real delights of programming is picking great variable, method, and class names. But an even greater treat is when you can name pairs, or even whole narratives, that fit just right. And the very best of those is when you’re forced to trade off multiple forces pulling in different directions. This is the story of one such case.
                        
                        It sta...
            </p>
</div>,
          "replace": false,
          "to": "/articles/123",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              undefined,
              <p
                className="text-muted"
>
                One of the real delights of programming is picking great variable, method, and class names. But an even greater treat is when you can name pairs, or even whole narratives, that fit just right. And the very best of those is when you’re forced to trade off multiple forces pulling in different directions. This is the story of one such case.
                
                It sta...
</p>,
            ],
            "className": "article__contents",
          },
          "ref": null,
          "rendered": Array [
            undefined,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "One of the real delights of programming is picking great variable, method, and class names. But an even greater treat is when you can name pairs, or even whole narratives, that fit just right. And the very best of those is when you’re forced to trade off multiple forces pulling in different directions. This is the story of one such case.

It sta...",
                "className": "text-muted",
              },
              "ref": null,
              "rendered": "One of the real delights of programming is picking great variable, method, and class names. But an even greater treat is when you can name pairs, or even whole narratives, that fit just right. And the very best of those is when you’re forced to trade off multiple forces pulling in different directions. This is the story of one such case.

It sta...",
              "type": "p",
            },
          ],
          "type": "div",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": "hr",
      },
    ],
    "type": "article",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h2
            className="article__title"
>
            <Link
                        replace={false}
                        to="/articles/123"
            >
                        Hunting for great names in programming
            </Link>
</h2>,
          <ul
            className="article__subtitle mb-2"
>
            <li>
                        <FontAwesomeIcon$1
                                    border={false}
                                    className="mr-2"
                                    fixedWidth={false}
                                    flip={null}
                                    icon="calendar-alt"
                                    listItem={false}
                                    mask={null}
                                    name=""
                                    pull={null}
                                    pulse={false}
                                    rotation={null}
                                    size={null}
                                    spin={false}
                                    symbol={false}
                                    transform={null}
                        />
                        <button
                                    className="btn btn-link article__subtitle--date"
                                    onClick={[Function]}
                        >
                                    February 28th, 2018
                        </button>
            </li>
</ul>,
          <Link
            replace={false}
            to="/articles/123"
>
            <div
                        className="article__contents"
            >
                        <p
                                    className="text-muted"
                        >
                                    One of the real delights of programming is picking great variable, method, and class names. But an even greater treat is when you can name pairs, or even whole narratives, that fit just right. And the very best of those is when you’re forced to trade off multiple forces pulling in different directions. This is the story of one such case.
                                    
                                    It sta...
                        </p>
            </div>
</Link>,
          <hr />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <Link
              replace={false}
              to="/articles/123"
>
              Hunting for great names in programming
</Link>,
            "className": "article__title",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Hunting for great names in programming",
              "replace": false,
              "to": "/articles/123",
            },
            "ref": null,
            "rendered": "Hunting for great names in programming",
            "type": [Function],
          },
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <li>
                <FontAwesomeIcon$1
                                border={false}
                                className="mr-2"
                                fixedWidth={false}
                                flip={null}
                                icon="calendar-alt"
                                listItem={false}
                                mask={null}
                                name=""
                                pull={null}
                                pulse={false}
                                rotation={null}
                                size={null}
                                spin={false}
                                symbol={false}
                                transform={null}
                />
                <button
                                className="btn btn-link article__subtitle--date"
                                onClick={[Function]}
                >
                                February 28th, 2018
                </button>
</li>,
              null,
            ],
            "className": "article__subtitle mb-2",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <FontAwesomeIcon$1
                    border={false}
                    className="mr-2"
                    fixedWidth={false}
                    flip={null}
                    icon="calendar-alt"
                    listItem={false}
                    mask={null}
                    name=""
                    pull={null}
                    pulse={false}
                    rotation={null}
                    size={null}
                    spin={false}
                    symbol={false}
                    transform={null}
/>,
                  <button
                    className="btn btn-link article__subtitle--date"
                    onClick={[Function]}
>
                    February 28th, 2018
</button>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "border": false,
                    "className": "mr-2",
                    "fixedWidth": false,
                    "flip": null,
                    "icon": "calendar-alt",
                    "listItem": false,
                    "mask": null,
                    "name": "",
                    "pull": null,
                    "pulse": false,
                    "rotation": null,
                    "size": null,
                    "spin": false,
                    "symbol": false,
                    "transform": null,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "February 28th, 2018",
                    "className": "btn btn-link article__subtitle--date",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": "February 28th, 2018",
                  "type": "button",
                },
              ],
              "type": "li",
            },
            null,
          ],
          "type": "ul",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <div
              className="article__contents"
>
              <p
                            className="text-muted"
              >
                            One of the real delights of programming is picking great variable, method, and class names. But an even greater treat is when you can name pairs, or even whole narratives, that fit just right. And the very best of those is when you’re forced to trade off multiple forces pulling in different directions. This is the story of one such case.
                            
                            It sta...
              </p>
</div>,
            "replace": false,
            "to": "/articles/123",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                undefined,
                <p
                  className="text-muted"
>
                  One of the real delights of programming is picking great variable, method, and class names. But an even greater treat is when you can name pairs, or even whole narratives, that fit just right. And the very best of those is when you’re forced to trade off multiple forces pulling in different directions. This is the story of one such case.
                  
                  It sta...
</p>,
              ],
              "className": "article__contents",
            },
            "ref": null,
            "rendered": Array [
              undefined,
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "One of the real delights of programming is picking great variable, method, and class names. But an even greater treat is when you can name pairs, or even whole narratives, that fit just right. And the very best of those is when you’re forced to trade off multiple forces pulling in different directions. This is the story of one such case.

It sta...",
                  "className": "text-muted",
                },
                "ref": null,
                "rendered": "One of the real delights of programming is picking great variable, method, and class names. But an even greater treat is when you can name pairs, or even whole narratives, that fit just right. And the very best of those is when you’re forced to trade off multiple forces pulling in different directions. This is the story of one such case.

It sta...",
                "type": "p",
              },
            ],
            "type": "div",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": "hr",
        },
      ],
      "type": "article",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Components HomePage Article Snapshot should correctly render Article 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    article={
        Object {
            "author": "dhh",
            "body": "One of the real delights of programming is picking great variable, method, and class names. But an even greater treat is when you can name pairs, or even whole narratives, that fit just right. And the very best of those is when you’re forced to trade off multiple forces pulling in different directions. This is the story of one such case.
        
        It started with a simple refactoring. We allow people to post arbitrary URLs in Basecamp 3’s chat, which we’ll attempt to fetch and display inline, if its an image, movie, or a Twitter URL. There’s a security concern where we don’t want to allow internal IPs in those URLs, like 127.0.0.1, and then have our Downloader class attempt to trigger an internal request that may sidestep other security precautions.
        
        The specific policy isn’t as important as the fact that this precondition was originally just part of the Downloader class, but now I also needed it in our forthcoming webhooks API. Because just like with previewable chat URLs, webhooks allow users to set URLs that our system then calls. Same underlying security issue to deal with.
        
        No problemo: Just extract the protection into its own module and call it from both spots. First attempt at naming this new module gave me PrivateNetworkProtector, which seemed like a fine choice until I considered the method names that’d work with it:
        
        ",
            "created_at": "2018-02-28T14:48:54.444740278Z",
            "id": "123",
            "tags": null,
            "title": "Hunting for great names in programming",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h2
          className="article__title"
>
          <Link
                    replace={false}
                    to="/articles/123"
          >
                    Hunting for great names in programming
          </Link>
</h2>,
        <ul
          className="article__subtitle mb-2"
>
          <li>
                    <FontAwesomeIcon$1
                              border={false}
                              className="mr-2"
                              fixedWidth={false}
                              flip={null}
                              icon="calendar-alt"
                              listItem={false}
                              mask={null}
                              name=""
                              pull={null}
                              pulse={false}
                              rotation={null}
                              size={null}
                              spin={false}
                              symbol={false}
                              transform={null}
                    />
                    <button
                              className="btn btn-link article__subtitle--date"
                              onClick={[Function]}
                    >
                              February 28th, 2018
                    </button>
          </li>
          <li
                    className="article__subtitle--tags"
          >
                    <FontAwesomeIcon$1
                              border={false}
                              className="mr-2"
                              fixedWidth={false}
                              flip={null}
                              icon="tag"
                              listItem={false}
                              mask={null}
                              name=""
                              pull={null}
                              pulse={false}
                              rotation={null}
                              size={null}
                              spin={false}
                              symbol={false}
                              transform={null}
                    />
                    <button
                              className="article__subtitle--tag btn btn-link"
                              onClick={[Function]}
                    >
                              ruby
                    </button>
                    <button
                              className="article__subtitle--tag btn btn-link"
                              onClick={[Function]}
                    >
                              rails
                    </button>
                    <button
                              className="article__subtitle--tag btn btn-link"
                              onClick={[Function]}
                    >
                              naming
                    </button>
                    <button
                              className="article__subtitle--tag btn btn-link"
                              onClick={[Function]}
                    >
                              web
                    </button>
          </li>
</ul>,
        <Link
          replace={false}
          to="/articles/123"
>
          <div
                    className="article__contents"
          >
                    <p
                              className="text-muted"
                    >
                              One of the real delights of programming is picking great variable, method, and class names. But an even greater treat is when you can name pairs, or even whole narratives, that fit just right. And the very best of those is when you’re forced to trade off multiple forces pulling in different directions. This is the story of one such case.
                              
                              It sta...
                    </p>
          </div>
</Link>,
        <hr />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <Link
            replace={false}
            to="/articles/123"
>
            Hunting for great names in programming
</Link>,
          "className": "article__title",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Hunting for great names in programming",
            "replace": false,
            "to": "/articles/123",
          },
          "ref": null,
          "rendered": "Hunting for great names in programming",
          "type": [Function],
        },
        "type": "h2",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <li>
              <FontAwesomeIcon$1
                            border={false}
                            className="mr-2"
                            fixedWidth={false}
                            flip={null}
                            icon="calendar-alt"
                            listItem={false}
                            mask={null}
                            name=""
                            pull={null}
                            pulse={false}
                            rotation={null}
                            size={null}
                            spin={false}
                            symbol={false}
                            transform={null}
              />
              <button
                            className="btn btn-link article__subtitle--date"
                            onClick={[Function]}
              >
                            February 28th, 2018
              </button>
</li>,
            <li
              className="article__subtitle--tags"
>
              <FontAwesomeIcon$1
                            border={false}
                            className="mr-2"
                            fixedWidth={false}
                            flip={null}
                            icon="tag"
                            listItem={false}
                            mask={null}
                            name=""
                            pull={null}
                            pulse={false}
                            rotation={null}
                            size={null}
                            spin={false}
                            symbol={false}
                            transform={null}
              />
              <button
                            className="article__subtitle--tag btn btn-link"
                            onClick={[Function]}
              >
                            ruby
              </button>
              <button
                            className="article__subtitle--tag btn btn-link"
                            onClick={[Function]}
              >
                            rails
              </button>
              <button
                            className="article__subtitle--tag btn btn-link"
                            onClick={[Function]}
              >
                            naming
              </button>
              <button
                            className="article__subtitle--tag btn btn-link"
                            onClick={[Function]}
              >
                            web
              </button>
</li>,
          ],
          "className": "article__subtitle mb-2",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <FontAwesomeIcon$1
                  border={false}
                  className="mr-2"
                  fixedWidth={false}
                  flip={null}
                  icon="calendar-alt"
                  listItem={false}
                  mask={null}
                  name=""
                  pull={null}
                  pulse={false}
                  rotation={null}
                  size={null}
                  spin={false}
                  symbol={false}
                  transform={null}
/>,
                <button
                  className="btn btn-link article__subtitle--date"
                  onClick={[Function]}
>
                  February 28th, 2018
</button>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "border": false,
                  "className": "mr-2",
                  "fixedWidth": false,
                  "flip": null,
                  "icon": "calendar-alt",
                  "listItem": false,
                  "mask": null,
                  "name": "",
                  "pull": null,
                  "pulse": false,
                  "rotation": null,
                  "size": null,
                  "spin": false,
                  "symbol": false,
                  "transform": null,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "February 28th, 2018",
                  "className": "btn btn-link article__subtitle--date",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": "February 28th, 2018",
                "type": "button",
              },
            ],
            "type": "li",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <FontAwesomeIcon$1
                  border={false}
                  className="mr-2"
                  fixedWidth={false}
                  flip={null}
                  icon="tag"
                  listItem={false}
                  mask={null}
                  name=""
                  pull={null}
                  pulse={false}
                  rotation={null}
                  size={null}
                  spin={false}
                  symbol={false}
                  transform={null}
/>,
                Array [
                  Array [
                    <button
                      className="article__subtitle--tag btn btn-link"
                      onClick={[Function]}
>
                      ruby
</button>,
                  ],
                  Array [
                    <button
                      className="article__subtitle--tag btn btn-link"
                      onClick={[Function]}
>
                      rails
</button>,
                  ],
                  Array [
                    <button
                      className="article__subtitle--tag btn btn-link"
                      onClick={[Function]}
>
                      naming
</button>,
                  ],
                  Array [
                    <button
                      className="article__subtitle--tag btn btn-link"
                      onClick={[Function]}
>
                      web
</button>,
                  ],
                ],
              ],
              "className": "article__subtitle--tags",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "border": false,
                  "className": "mr-2",
                  "fixedWidth": false,
                  "flip": null,
                  "icon": "tag",
                  "listItem": false,
                  "mask": null,
                  "name": "",
                  "pull": null,
                  "pulse": false,
                  "rotation": null,
                  "size": null,
                  "spin": false,
                  "symbol": false,
                  "transform": null,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": "ruby",
                "nodeType": "host",
                "props": Object {
                  "children": "ruby",
                  "className": "article__subtitle--tag btn btn-link",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": "ruby",
                "type": "button",
              },
              Object {
                "instance": null,
                "key": "rails",
                "nodeType": "host",
                "props": Object {
                  "children": "rails",
                  "className": "article__subtitle--tag btn btn-link",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": "rails",
                "type": "button",
              },
              Object {
                "instance": null,
                "key": "naming",
                "nodeType": "host",
                "props": Object {
                  "children": "naming",
                  "className": "article__subtitle--tag btn btn-link",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": "naming",
                "type": "button",
              },
              Object {
                "instance": null,
                "key": "web",
                "nodeType": "host",
                "props": Object {
                  "children": "web",
                  "className": "article__subtitle--tag btn btn-link",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": "web",
                "type": "button",
              },
            ],
            "type": "li",
          },
        ],
        "type": "ul",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <div
            className="article__contents"
>
            <p
                        className="text-muted"
            >
                        One of the real delights of programming is picking great variable, method, and class names. But an even greater treat is when you can name pairs, or even whole narratives, that fit just right. And the very best of those is when you’re forced to trade off multiple forces pulling in different directions. This is the story of one such case.
                        
                        It sta...
            </p>
</div>,
          "replace": false,
          "to": "/articles/123",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              undefined,
              <p
                className="text-muted"
>
                One of the real delights of programming is picking great variable, method, and class names. But an even greater treat is when you can name pairs, or even whole narratives, that fit just right. And the very best of those is when you’re forced to trade off multiple forces pulling in different directions. This is the story of one such case.
                
                It sta...
</p>,
            ],
            "className": "article__contents",
          },
          "ref": null,
          "rendered": Array [
            undefined,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "One of the real delights of programming is picking great variable, method, and class names. But an even greater treat is when you can name pairs, or even whole narratives, that fit just right. And the very best of those is when you’re forced to trade off multiple forces pulling in different directions. This is the story of one such case.

It sta...",
                "className": "text-muted",
              },
              "ref": null,
              "rendered": "One of the real delights of programming is picking great variable, method, and class names. But an even greater treat is when you can name pairs, or even whole narratives, that fit just right. And the very best of those is when you’re forced to trade off multiple forces pulling in different directions. This is the story of one such case.

It sta...",
              "type": "p",
            },
          ],
          "type": "div",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": "hr",
      },
    ],
    "type": "article",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h2
            className="article__title"
>
            <Link
                        replace={false}
                        to="/articles/123"
            >
                        Hunting for great names in programming
            </Link>
</h2>,
          <ul
            className="article__subtitle mb-2"
>
            <li>
                        <FontAwesomeIcon$1
                                    border={false}
                                    className="mr-2"
                                    fixedWidth={false}
                                    flip={null}
                                    icon="calendar-alt"
                                    listItem={false}
                                    mask={null}
                                    name=""
                                    pull={null}
                                    pulse={false}
                                    rotation={null}
                                    size={null}
                                    spin={false}
                                    symbol={false}
                                    transform={null}
                        />
                        <button
                                    className="btn btn-link article__subtitle--date"
                                    onClick={[Function]}
                        >
                                    February 28th, 2018
                        </button>
            </li>
            <li
                        className="article__subtitle--tags"
            >
                        <FontAwesomeIcon$1
                                    border={false}
                                    className="mr-2"
                                    fixedWidth={false}
                                    flip={null}
                                    icon="tag"
                                    listItem={false}
                                    mask={null}
                                    name=""
                                    pull={null}
                                    pulse={false}
                                    rotation={null}
                                    size={null}
                                    spin={false}
                                    symbol={false}
                                    transform={null}
                        />
                        <button
                                    className="article__subtitle--tag btn btn-link"
                                    onClick={[Function]}
                        >
                                    ruby
                        </button>
                        <button
                                    className="article__subtitle--tag btn btn-link"
                                    onClick={[Function]}
                        >
                                    rails
                        </button>
                        <button
                                    className="article__subtitle--tag btn btn-link"
                                    onClick={[Function]}
                        >
                                    naming
                        </button>
                        <button
                                    className="article__subtitle--tag btn btn-link"
                                    onClick={[Function]}
                        >
                                    web
                        </button>
            </li>
</ul>,
          <Link
            replace={false}
            to="/articles/123"
>
            <div
                        className="article__contents"
            >
                        <p
                                    className="text-muted"
                        >
                                    One of the real delights of programming is picking great variable, method, and class names. But an even greater treat is when you can name pairs, or even whole narratives, that fit just right. And the very best of those is when you’re forced to trade off multiple forces pulling in different directions. This is the story of one such case.
                                    
                                    It sta...
                        </p>
            </div>
</Link>,
          <hr />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <Link
              replace={false}
              to="/articles/123"
>
              Hunting for great names in programming
</Link>,
            "className": "article__title",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Hunting for great names in programming",
              "replace": false,
              "to": "/articles/123",
            },
            "ref": null,
            "rendered": "Hunting for great names in programming",
            "type": [Function],
          },
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <li>
                <FontAwesomeIcon$1
                                border={false}
                                className="mr-2"
                                fixedWidth={false}
                                flip={null}
                                icon="calendar-alt"
                                listItem={false}
                                mask={null}
                                name=""
                                pull={null}
                                pulse={false}
                                rotation={null}
                                size={null}
                                spin={false}
                                symbol={false}
                                transform={null}
                />
                <button
                                className="btn btn-link article__subtitle--date"
                                onClick={[Function]}
                >
                                February 28th, 2018
                </button>
</li>,
              <li
                className="article__subtitle--tags"
>
                <FontAwesomeIcon$1
                                border={false}
                                className="mr-2"
                                fixedWidth={false}
                                flip={null}
                                icon="tag"
                                listItem={false}
                                mask={null}
                                name=""
                                pull={null}
                                pulse={false}
                                rotation={null}
                                size={null}
                                spin={false}
                                symbol={false}
                                transform={null}
                />
                <button
                                className="article__subtitle--tag btn btn-link"
                                onClick={[Function]}
                >
                                ruby
                </button>
                <button
                                className="article__subtitle--tag btn btn-link"
                                onClick={[Function]}
                >
                                rails
                </button>
                <button
                                className="article__subtitle--tag btn btn-link"
                                onClick={[Function]}
                >
                                naming
                </button>
                <button
                                className="article__subtitle--tag btn btn-link"
                                onClick={[Function]}
                >
                                web
                </button>
</li>,
            ],
            "className": "article__subtitle mb-2",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <FontAwesomeIcon$1
                    border={false}
                    className="mr-2"
                    fixedWidth={false}
                    flip={null}
                    icon="calendar-alt"
                    listItem={false}
                    mask={null}
                    name=""
                    pull={null}
                    pulse={false}
                    rotation={null}
                    size={null}
                    spin={false}
                    symbol={false}
                    transform={null}
/>,
                  <button
                    className="btn btn-link article__subtitle--date"
                    onClick={[Function]}
>
                    February 28th, 2018
</button>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "border": false,
                    "className": "mr-2",
                    "fixedWidth": false,
                    "flip": null,
                    "icon": "calendar-alt",
                    "listItem": false,
                    "mask": null,
                    "name": "",
                    "pull": null,
                    "pulse": false,
                    "rotation": null,
                    "size": null,
                    "spin": false,
                    "symbol": false,
                    "transform": null,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "February 28th, 2018",
                    "className": "btn btn-link article__subtitle--date",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": "February 28th, 2018",
                  "type": "button",
                },
              ],
              "type": "li",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <FontAwesomeIcon$1
                    border={false}
                    className="mr-2"
                    fixedWidth={false}
                    flip={null}
                    icon="tag"
                    listItem={false}
                    mask={null}
                    name=""
                    pull={null}
                    pulse={false}
                    rotation={null}
                    size={null}
                    spin={false}
                    symbol={false}
                    transform={null}
/>,
                  Array [
                    Array [
                      <button
                        className="article__subtitle--tag btn btn-link"
                        onClick={[Function]}
>
                        ruby
</button>,
                    ],
                    Array [
                      <button
                        className="article__subtitle--tag btn btn-link"
                        onClick={[Function]}
>
                        rails
</button>,
                    ],
                    Array [
                      <button
                        className="article__subtitle--tag btn btn-link"
                        onClick={[Function]}
>
                        naming
</button>,
                    ],
                    Array [
                      <button
                        className="article__subtitle--tag btn btn-link"
                        onClick={[Function]}
>
                        web
</button>,
                    ],
                  ],
                ],
                "className": "article__subtitle--tags",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "border": false,
                    "className": "mr-2",
                    "fixedWidth": false,
                    "flip": null,
                    "icon": "tag",
                    "listItem": false,
                    "mask": null,
                    "name": "",
                    "pull": null,
                    "pulse": false,
                    "rotation": null,
                    "size": null,
                    "spin": false,
                    "symbol": false,
                    "transform": null,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": "ruby",
                  "nodeType": "host",
                  "props": Object {
                    "children": "ruby",
                    "className": "article__subtitle--tag btn btn-link",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": "ruby",
                  "type": "button",
                },
                Object {
                  "instance": null,
                  "key": "rails",
                  "nodeType": "host",
                  "props": Object {
                    "children": "rails",
                    "className": "article__subtitle--tag btn btn-link",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": "rails",
                  "type": "button",
                },
                Object {
                  "instance": null,
                  "key": "naming",
                  "nodeType": "host",
                  "props": Object {
                    "children": "naming",
                    "className": "article__subtitle--tag btn btn-link",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": "naming",
                  "type": "button",
                },
                Object {
                  "instance": null,
                  "key": "web",
                  "nodeType": "host",
                  "props": Object {
                    "children": "web",
                    "className": "article__subtitle--tag btn btn-link",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": "web",
                  "type": "button",
                },
              ],
              "type": "li",
            },
          ],
          "type": "ul",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <div
              className="article__contents"
>
              <p
                            className="text-muted"
              >
                            One of the real delights of programming is picking great variable, method, and class names. But an even greater treat is when you can name pairs, or even whole narratives, that fit just right. And the very best of those is when you’re forced to trade off multiple forces pulling in different directions. This is the story of one such case.
                            
                            It sta...
              </p>
</div>,
            "replace": false,
            "to": "/articles/123",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                undefined,
                <p
                  className="text-muted"
>
                  One of the real delights of programming is picking great variable, method, and class names. But an even greater treat is when you can name pairs, or even whole narratives, that fit just right. And the very best of those is when you’re forced to trade off multiple forces pulling in different directions. This is the story of one such case.
                  
                  It sta...
</p>,
              ],
              "className": "article__contents",
            },
            "ref": null,
            "rendered": Array [
              undefined,
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "One of the real delights of programming is picking great variable, method, and class names. But an even greater treat is when you can name pairs, or even whole narratives, that fit just right. And the very best of those is when you’re forced to trade off multiple forces pulling in different directions. This is the story of one such case.

It sta...",
                  "className": "text-muted",
                },
                "ref": null,
                "rendered": "One of the real delights of programming is picking great variable, method, and class names. But an even greater treat is when you can name pairs, or even whole narratives, that fit just right. And the very best of those is when you’re forced to trade off multiple forces pulling in different directions. This is the story of one such case.

It sta...",
                "type": "p",
              },
            ],
            "type": "div",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": "hr",
        },
      ],
      "type": "article",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
